manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-project-frontend
  namespace: todo-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-project-frontend
  template:
    metadata:
      labels:
        app: todo-project-frontend
    spec:
      volumes:
        - name: static-files
          persistentVolumeClaim:
            claimName: todo-project-claim
        - name: config
          configMap:
            name: web-config
            items:
              - key: "web.properties"
                path: "config.js"
      containers:
      - name: todo-project-frontend
        image: IMAGE_PLACEHOLDER
        volumeMounts:
          - mountPath: "/var/app/build/static/pv"
            name: static-files
          - mountPath:  "/var/app/build/static/config.js"
            name: config
            subPath: "config.js"
        readinessProbe:
          initialDelaySeconds: 60
          periodSeconds: 10
          httpGet:
            path: /health
            port: 3000
        resources:
          limits:
            cpu: "200m"
            memory: "10Mi"
